[package]
name = "nodio"
version = "0.4.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Ergonomic graph data storage with queries over relations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/nodio"
repository = "https://github.com/PsichiX/nodio"
documentation = "https://docs.rs/nodio"
readme = "README.md"

[dependencies]
intuicio-data = "0.45"
intuicio-core = "0.45"
intuicio-derive = "0.45"
intuicio-framework-serde = "0.45"
intuicio-framework-arena = "0.45"
serde = { version = "1", features = ["derive"] }
