[package]
name = "nodio"
version = "0.5.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Ergonomic graph data storage with queries over relations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/nodio"
repository = "https://github.com/PsichiX/nodio"
documentation = "https://docs.rs/nodio"
readme = "README.md"

[dependencies]
intuicio-data = "0.49"
intuicio-core = "0.49"
intuicio-derive = "0.49"
intuicio-framework-serde = "0.49"
intuicio-framework-arena = "0.49"
serde = { version = "1", features = ["derive"] }
